--- a/10-install.adoc
+++ b/10-install.adoc
@@ -1,2 +1,6 @@
 [[install]]
 = Installing CodeReady Workspaces
+In this Lab we install CodeReady Workspaces(CRW) on OpenShift using an Operator.
+
+== Create a project
+First we will need to create a project for CRW to execute in
