--- a/10-install.adoc
+++ b/10-install.adoc
@@ -4,4 +4,14 @@
 In this Lab we install CodeReady Workspaces(CRW) on OpenShift using an Operator.
 
 === Create a project in OpenShift
-First we will need to create a project for CRW to execute in
+First we will need to create a project in OpenShift for CRW to execute in.
+
+. Open the OpenShift web console.
+. In the left panel, navigate to `Projects`.
+. Click the `Create Project` button.
+. Enter the project details:
+.. In the *Name* field, type `codeready`.
+.. In the *Display Name* field, type `Red Hat CodeReady Workspaces`.
+. Click the `Create` button.
+
+NOTE: This step requires an administrator account on a running instance of OpenShift 4
