--- a/51-getting-started.adoc
+++ b/51-getting-started.adoc
@@ -8,14 +8,14 @@ In this lab we will walk through setting up or first workspace.
 
 We will be creating a Quarkus application.  If your experience with java this will all look familar.  If not don't worry the point of this excercise is to teach the value of CodeReady Workspaces and not a programming language.
 
-. If your not already on the `Getting Started` view.  Click it on the left
+. If your not already on the *Getting Started* view.  Click it on the left
 +
 image::get-started.png[image]
 +
-. Within the page you will see a Quarkus tile, click it. Notice the tile in the image above.
+. Within the page you will see a *Quarkus Tools* tile, click it. Notice the tile in the image above.
 . Notice in the upper right the *CREATE AND OPEN* button is highlighted, click it.
-. This will start an ide and will take a few minutes. You will see updates as it progress and notice the workspace being created under the *RECENT WORKSPACES*.
-. Once completed the IDE will open.  If you have worked with Visual Studio the IDE should look familar.  Both products are based on an opensource upstream project.
+. This will start the ide and will take a few minutes. You will see updates as it progress and notice the workspace being created under the *RECENT WORKSPACES*.
+. Once completed the IDE will open.  If you have worked with Visual Studio the IDE should look familar.  Both products are based on the same opensource upstream project.
 
 === Introduction to the file exployer and terminal 
 
@@ -40,7 +40,7 @@ the same files.  This is the file system of you developemen environment.
 image::terminal.png[image]
 
 
-=== Executing tasks
+=== Executing tasks, hot deploy
 
 . On the far right click on the *cube* icon
 . Expand *User Runtimes* and *maven*
@@ -51,14 +51,38 @@ image::package.png[image]
 +
 . Now lets start the appllication
 . In the same list single click the *Start Quarkus in devmode (hot deploy + debug)*
-. A model will open stating "A process is not listening...". Click *Open Link*
+. A modal will open stating "A process is not listening...". Click *Open Link*
 +
 image::process-listening.png[image]
 +
-. In a new right pane a browser view will open.  It will be opened to the base url of the appliction 
+. A browser view will be created in a pane on  the right.  It will be opened to the base url of the appliction 
 +
 image::browser-view.png[image]
 +
 . Go back to the cude icon on the right and click *hello-greeting-endpoint*
 . Change *che-user* at the end of the url to your first name. Notice how the page responds once you hit enter.
+. Now lets change some code. 
+. Go to the GreetingService.java class shown below.
++
+image::hot-deploy.png[image]
++
+. Change hello to *hola* and save the file
+. Refresh your your browser from the previous step and notice the change was introduced without a compile step.  If you closed your browser window click *hello-greeting-endpoint* again.
+. Close the cosole running quarkus?
+. Now lets turn our attention to debuging.
+. Notice in the menu bar a *Debug* item, click it.
++
+image::start-debugging.png[image]
++
+. In the *GreetingService* add a break point by clicking in the gutter of the statement shown below.  You will end up with a red dot like below.
++
+image::breakpoint.png[image]
++
+. Refresh you browser showing the *hello-greeting-endpoint* or click it again in the task manager
+. Go back to the IDE and notice the break point has been hit.
++
+image::breakpoint.png[image]
++
+. Notice all the debuggging panes on the left side of workspace.
+. Clike the *blue play pause* button to continue executing the code.
 
