--- a/14-admin-dev-console.adoc
+++ b/14-admin-dev-console.adoc
@@ -13,4 +13,4 @@ image::admin-console.png[image]
 . Login to console URL https://console-openshift-console.<subdomain>/ with any username
 . You can click on the top left corner and select `Developer` and you will switch Developer console
 
-image::admin-console.png[image]
+image::dev-console.png[image]
