--- a/12-assign-limit-ranges-and-quotas.adoc
+++ b/12-assign-limit-ranges-and-quotas.adoc
@@ -16,16 +16,15 @@ Limit Ranges can be set on an existing project or a brand new projects. Dependin
 
 ==== Configure Limits Ranges and Quotas
 
-. For this exercise we will be going the "brand new project" route. Create this project called limits-quotas
-
-==== Create a project in OpenShift
-This section describes how to create the a new project in OpenShift web console.
+For this exercise we will be going the "brand new project" route. Create this project called limits-quotas
 
 [NOTE]
 ====
 Every user should have an admin and dev users for the workshop.
 Replace `user1` to your assigned dev user.
 ====
+
+==== Create a project in OpenShift
 
 . Open the OpenShift web console and login as admin user.
 . In the left panel, navigate to `Projects`.
@@ -36,7 +35,7 @@ Replace `user1` to your assigned dev user.
 . Click the `Create` button.
 
 ==== Assign User to a project
-In this example, I use `user1`.
+
 . In the left panel, navigate to the *User Management → Users* section.
 . Click onto the 3-dots icon and select `Edit User`
 . Click `Role Bindings`
@@ -108,9 +107,7 @@ image::project-details.png[image]
 . In the left panel, navigate to the *Topology* section.
 . Click in the middle of the circle and click onto deployment name `welcome-limits`
 . Use the arrow up to increase pod number to 5
-. you will notice the deployment only spin up 4 pods instead of 5
-
-  image::deployment-quota.png[image]
+. you will notice the deployment only spin up 4 pods instead of 5 image:deployment-quota.png[image]
 
 . In the left panel, navigate to the *Advanced → Events* section.
 
